--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Radek Farny | plyn
+title: Radek Farny | revize plynových zařízení
 email: radek.farny@seznam.cz
 description: >- 
   Radek Farny revize plynových zařízení - web
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  radek-farny
-keywords: "Radek Farny, Bolešiny, Klatovy, Seznam, kontakt, plyn, revize, plynová zařízení"
+keywords: "Radek Farny, Bolešiny, Klatovy, Seznam, kontakt, plyn, revize, plynová zařízení, revize, plynu"
 
 # Build settings
 theme: minima
