--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Radek Farny | revize plynových zařízení | revize plynu Klatovy
+title: Revize plynu Klatovy - Radek Farny
 email: radek.farny@seznam.cz
 description: >- 
-  Radek Farny revize plynových zařízení - web
+  Radek Farny profesionální revize plynových zařízení v Klatovech a okolí - web
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  radek-farny
-keywords: "Radek Farny, Bolešiny, Klatovy, Seznam, kontakt, plyn, revize, plynová zařízení, revize, plynu, revize plynu Klatovy"
+keywords: "Radek Farny, Bolešiny, Klatovy, Seznam, kontakt, plyn, revize, plynová zařízení, revize, plynu, revize plynu Klatovy, revize plynu v Klatovech"
 
 # Build settings
 theme: minima
